// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Multi Line Tooltip - No Header should render multiple line tooltip correctly 1`] = `
<WithStyles(ForwardRef)
  title={
    <div>
      <WithStyles(ForwardRef)
        variant="highlightText"
      >
        
      </WithStyles(ForwardRef)>
      <div>
        <WithStyles(ForwardRef)
          variant="highlightText"
        >
          Status
        </WithStyles(ForwardRef)>
        <div />
        <WithStyles(ForwardRef)>
          Open
        </WithStyles(ForwardRef)>
      </div>
      <div>
        <WithStyles(ForwardRef)
          variant="highlightText"
        >
          Date
        </WithStyles(ForwardRef)>
        <div />
        <WithStyles(ForwardRef)>
          12/08/2018
        </WithStyles(ForwardRef)>
      </div>
      <div>
        <WithStyles(ForwardRef)
          variant="highlightText"
        >
          Assignee
        </WithStyles(ForwardRef)>
        <div />
        <WithStyles(ForwardRef)>
          Management
        </WithStyles(ForwardRef)>
      </div>
      <div>
        <WithStyles(ForwardRef)
          variant="highlightText"
        >
          Approval
        </WithStyles(ForwardRef)>
        <div />
        <WithStyles(ForwardRef)>
          Not yet requested
        </WithStyles(ForwardRef)>
      </div>
    </div>
  }
  useSingle={false}
>
  <ForwardRef
    classes={
      Object {
        "color": "HvTooltip-color-52",
        "popper": "HvTooltip-popper-48",
        "root": "HvTooltip-root-45",
        "separator": "HvTooltip-separator-53",
        "separatorColor": "HvTooltip-separatorColor-54",
        "title": "HvTooltip-title-49",
        "tooltip": "HvTooltip-tooltip-46",
        "tooltipMulti": "HvTooltip-tooltipMulti-47",
        "valueWrapper": "HvTooltip-valueWrapper-55",
        "values": "HvTooltip-values-51",
        "valuesContainer": "HvTooltip-valuesContainer-50",
      }
    }
    title={
      <div>
        <WithStyles(ForwardRef)
          variant="highlightText"
        >
          
        </WithStyles(ForwardRef)>
        <div>
          <WithStyles(ForwardRef)
            variant="highlightText"
          >
            Status
          </WithStyles(ForwardRef)>
          <div />
          <WithStyles(ForwardRef)>
            Open
          </WithStyles(ForwardRef)>
        </div>
        <div>
          <WithStyles(ForwardRef)
            variant="highlightText"
          >
            Date
          </WithStyles(ForwardRef)>
          <div />
          <WithStyles(ForwardRef)>
            12/08/2018
          </WithStyles(ForwardRef)>
        </div>
        <div>
          <WithStyles(ForwardRef)
            variant="highlightText"
          >
            Assignee
          </WithStyles(ForwardRef)>
          <div />
          <WithStyles(ForwardRef)>
            Management
          </WithStyles(ForwardRef)>
        </div>
        <div>
          <WithStyles(ForwardRef)
            variant="highlightText"
          >
            Approval
          </WithStyles(ForwardRef)>
          <div />
          <WithStyles(ForwardRef)>
            Not yet requested
          </WithStyles(ForwardRef)>
        </div>
      </div>
    }
    useSingle={false}
  >
    <ForwardRef(Tooltip)
      TransitionComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "propTypes": Object {
            "addEndListener": [Function],
            "appear": [Function],
            "children": [Function],
            "easing": [Function],
            "in": [Function],
            "onEnter": [Function],
            "onEntered": [Function],
            "onEntering": [Function],
            "onExit": [Function],
            "onExited": [Function],
            "onExiting": [Function],
            "style": [Function],
            "timeout": [Function],
          },
          "render": [Function],
        }
      }
      TransitionProps={
        Object {
          "timeout": 400,
        }
      }
      classes={
        Object {
          "popper": "HvTooltip-popper-48",
          "tooltip": "HvTooltip-tooltipMulti-47",
        }
      }
      enterDelay={300}
      placement="top"
      title={
        <div>
          <WithStyles(ForwardRef)
            variant="highlightText"
          >
            
          </WithStyles(ForwardRef)>
          <div>
            <WithStyles(ForwardRef)
              variant="highlightText"
            >
              Status
            </WithStyles(ForwardRef)>
            <div />
            <WithStyles(ForwardRef)>
              Open
            </WithStyles(ForwardRef)>
          </div>
          <div>
            <WithStyles(ForwardRef)
              variant="highlightText"
            >
              Date
            </WithStyles(ForwardRef)>
            <div />
            <WithStyles(ForwardRef)>
              12/08/2018
            </WithStyles(ForwardRef)>
          </div>
          <div>
            <WithStyles(ForwardRef)
              variant="highlightText"
            >
              Assignee
            </WithStyles(ForwardRef)>
            <div />
            <WithStyles(ForwardRef)>
              Management
            </WithStyles(ForwardRef)>
          </div>
          <div>
            <WithStyles(ForwardRef)
              variant="highlightText"
            >
              Approval
            </WithStyles(ForwardRef)>
            <div />
            <WithStyles(ForwardRef)>
              Not yet requested
            </WithStyles(ForwardRef)>
          </div>
        </div>
      }
    >
      <button
        aria-label={null}
        aria-labelledby={null}
        className=""
        data-mui-internal-clone-element={true}
        id="testChild"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
        onTouchEnd={[Function]}
        onTouchStart={[Function]}
        type="submit"
      >
        Hello World
      </button>
      <MuiTooltipPopper
        anchorEl={
          <button
            class=""
            data-mui-internal-clone-element="true"
            id="testChild"
            type="submit"
          >
            Hello World
          </button>
        }
        as={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "propTypes": Object {
              "anchorEl": [Function],
              "children": [Function],
              "container": [Function],
              "disablePortal": [Function],
              "keepMounted": [Function],
              "modifiers": [Function],
              "open": [Function],
              "placement": [Function],
              "popperOptions": [Function],
              "popperRef": [Function],
              "sx": [Function],
              "transition": [Function],
            },
            "render": [Function],
          }
        }
        className="HvTooltip-popper-48 MuiTooltip-popper MuiTooltip-popperInteractive"
        id="mui-5"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
        open={false}
        ownerState={
          Object {
            "PopperComponentProp": undefined,
            "TransitionComponent": Object {
              "$$typeof": Symbol(react.forward_ref),
              "propTypes": Object {
                "addEndListener": [Function],
                "appear": [Function],
                "children": [Function],
                "easing": [Function],
                "in": [Function],
                "onEnter": [Function],
                "onEntered": [Function],
                "onEntering": [Function],
                "onExit": [Function],
                "onExited": [Function],
                "onExiting": [Function],
                "style": [Function],
                "timeout": [Function],
              },
              "render": [Function],
            },
            "TransitionProps": Object {
              "timeout": 400,
            },
            "arrow": false,
            "children": <button
              id="testChild"
              type="submit"
            >
              Hello World
            </button>,
            "className": undefined,
            "classes": Object {
              "popper": "HvTooltip-popper-48",
              "tooltip": "HvTooltip-tooltipMulti-47",
            },
            "disableInteractive": false,
            "enterDelay": 300,
            "isRtl": false,
            "open": undefined,
            "placement": "top",
            "title": <div>
              <WithStyles(ForwardRef)
                variant="highlightText"
              >
                
              </WithStyles(ForwardRef)>
              <div>
                <WithStyles(ForwardRef)
                  variant="highlightText"
                >
                  Status
                </WithStyles(ForwardRef)>
                <div />
                <WithStyles(ForwardRef)>
                  Open
                </WithStyles(ForwardRef)>
              </div>
              <div>
                <WithStyles(ForwardRef)
                  variant="highlightText"
                >
                  Date
                </WithStyles(ForwardRef)>
                <div />
                <WithStyles(ForwardRef)>
                  12/08/2018
                </WithStyles(ForwardRef)>
              </div>
              <div>
                <WithStyles(ForwardRef)
                  variant="highlightText"
                >
                  Assignee
                </WithStyles(ForwardRef)>
                <div />
                <WithStyles(ForwardRef)>
                  Management
                </WithStyles(ForwardRef)>
              </div>
              <div>
                <WithStyles(ForwardRef)
                  variant="highlightText"
                >
                  Approval
                </WithStyles(ForwardRef)>
                <div />
                <WithStyles(ForwardRef)>
                  Not yet requested
                </WithStyles(ForwardRef)>
              </div>
            </div>,
            "touch": false,
          }
        }
        placement="top"
        popperOptions={
          Object {
            "modifiers": Array [
              Object {
                "enabled": false,
                "name": "arrow",
                "options": Object {
                  "element": null,
                  "padding": 4,
                },
              },
            ],
          }
        }
        popperRef={
          Object {
            "current": undefined,
          }
        }
        transition={true}
      >
        <Insertion
          cache={
            Object {
              "insert": [Function],
              "inserted": Object {
                "1433tg5-MuiTooltip-popper": true,
                "179vq5o-MuiPopper-root-MuiTooltip-popper": true,
              },
              "key": "css",
              "nonce": undefined,
              "registered": Object {
                "css-1433tg5-MuiTooltip-popper": "label:MuiTooltip-popper;z-index:1500;pointer-events:none;",
                "css-179vq5o-MuiPopper-root-MuiTooltip-popper": "label:MuiPopper-root;label:MuiTooltip-popper;z-index:1500;pointer-events:none;;",
              },
              "sheet": StyleSheet {
                "_alreadyInsertedOrderInsensitiveRule": true,
                "_insertTag": [Function],
                "before": null,
                "container": <head>
                  <style
                    data-emotion="css"
                    data-s=""
                  >
                    
                    .css-1433tg5-MuiTooltip-popper{z-index:1500;pointer-events:none;}
                  </style>
                  <style
                    data-emotion="css"
                    data-s=""
                  >
                    
                    .css-179vq5o-MuiPopper-root-MuiTooltip-popper{z-index:1500;pointer-events:none;}
                  </style>
                  <style
                    data-jss=""
                    data-meta="HvTooltip"
                  >
                    
.HvTooltip-root-1 {
  pointer-events: none;
}
.HvTooltip-tooltip-2 {
  width: fit-content;
  display: flex;
  padding: 15px 20px;
  max-width: 532px;
  box-shadow: 0 2px 12px rgba(65,65,65,0.12);
  background-color: #FBFCFC;
}
.HvTooltip-tooltip-2 p {
  color: #414141;
  width: fit-content;
  display: -webkit-box;
  overflow: hidden;
  box-orient: vertical;
  word-break: break-word;
  text-overflow: ellipsis;
}
.HvTooltip-tooltipMulti-3 {
  width: fit-content;
  display: flex;
  padding: 0;
  max-width: 532px;
  box-shadow: 0 2px 12px rgba(65,65,65,0.12);
  background-color: #FBFCFC;
}
.HvTooltip-tooltipMulti-3 p {
  color: #414141;
  width: fit-content;
  display: -webkit-box;
  overflow: hidden;
  box-orient: vertical;
  text-overflow: ellipsis;
}
.HvTooltip-popper-4 {
  opacity: 1;
}
.HvTooltip-title-5 {
  padding: 15px 20px;
  border-bottom: 3px solid #F0F0F0;
}
.HvTooltip-valuesContainer-6 {
  padding: 20px;
}
.HvTooltip-values-7 {
  display: flex;
  padding-bottom: 10px;
  justify-content: space-between;
}
.HvTooltip-values-7:last-child {
  padding-bottom: 0;
}
.HvTooltip-color-8 {
  width: 10px;
  height: 15px;
}
.HvTooltip-separator-9 {
  width: 10px;
}
.HvTooltip-separatorColor-10 {
  width: 5px;
}
.HvTooltip-valueWrapper-11 {
  padding: 20px;
}

                  </style>
                  <style
                    data-jss=""
                    data-meta="HvTooltip"
                  >
                    
.HvTooltip-root-12 {
  pointer-events: none;
}
.HvTooltip-tooltip-13 {
  width: fit-content;
  display: flex;
  padding: 15px 20px;
  max-width: 532px;
  box-shadow: 0 2px 12px rgba(65,65,65,0.12);
  background-color: #FBFCFC;
}
.HvTooltip-tooltip-13 p {
  color: #414141;
  width: fit-content;
  display: -webkit-box;
  overflow: hidden;
  box-orient: vertical;
  word-break: break-word;
  text-overflow: ellipsis;
}
.HvTooltip-tooltipMulti-14 {
  width: fit-content;
  display: flex;
  padding: 0;
  max-width: 532px;
  box-shadow: 0 2px 12px rgba(65,65,65,0.12);
  background-color: #FBFCFC;
}
.HvTooltip-tooltipMulti-14 p {
  color: #414141;
  width: fit-content;
  display: -webkit-box;
  overflow: hidden;
  box-orient: vertical;
  text-overflow: ellipsis;
}
.HvTooltip-popper-15 {
  opacity: 1;
}
.HvTooltip-title-16 {
  padding: 15px 20px;
  border-bottom: 3px solid #F0F0F0;
}
.HvTooltip-valuesContainer-17 {
  padding: 20px;
}
.HvTooltip-values-18 {
  display: flex;
  padding-bottom: 10px;
  justify-content: space-between;
}
.HvTooltip-values-18:last-child {
  padding-bottom: 0;
}
.HvTooltip-color-19 {
  width: 10px;
  height: 15px;
}
.HvTooltip-separator-20 {
  width: 10px;
}
.HvTooltip-separatorColor-21 {
  width: 5px;
}
.HvTooltip-valueWrapper-22 {
  padding: 20px;
}

                  </style>
                  <style
                    data-jss=""
                    data-meta="HvTooltip"
                  >
                    
.HvTooltip-root-23 {
  pointer-events: none;
}
.HvTooltip-tooltip-24 {
  width: fit-content;
  display: flex;
  padding: 15px 20px;
  max-width: 532px;
  box-shadow: 0 2px 12px rgba(65,65,65,0.12);
  background-color: #FBFCFC;
}
.HvTooltip-tooltip-24 p {
  color: #414141;
  width: fit-content;
  display: -webkit-box;
  overflow: hidden;
  box-orient: vertical;
  word-break: break-word;
  text-overflow: ellipsis;
}
.HvTooltip-tooltipMulti-25 {
  width: fit-content;
  display: flex;
  padding: 0;
  max-width: 532px;
  box-shadow: 0 2px 12px rgba(65,65,65,0.12);
  background-color: #FBFCFC;
}
.HvTooltip-tooltipMulti-25 p {
  color: #414141;
  width: fit-content;
  display: -webkit-box;
  overflow: hidden;
  box-orient: vertical;
  text-overflow: ellipsis;
}
.HvTooltip-popper-26 {
  opacity: 1;
}
.HvTooltip-title-27 {
  padding: 15px 20px;
  border-bottom: 3px solid #F0F0F0;
}
.HvTooltip-valuesContainer-28 {
  padding: 20px;
}
.HvTooltip-values-29 {
  display: flex;
  padding-bottom: 10px;
  justify-content: space-between;
}
.HvTooltip-values-29:last-child {
  padding-bottom: 0;
}
.HvTooltip-color-30 {
  width: 10px;
  height: 15px;
}
.HvTooltip-separator-31 {
  width: 10px;
}
.HvTooltip-separatorColor-32 {
  width: 5px;
}
.HvTooltip-valueWrapper-33 {
  padding: 20px;
}

                  </style>
                  <style
                    data-jss=""
                    data-meta="HvTooltip"
                  >
                    
.HvTooltip-root-34 {
  pointer-events: none;
}
.HvTooltip-tooltip-35 {
  width: fit-content;
  display: flex;
  padding: 15px 20px;
  max-width: 532px;
  box-shadow: 0 2px 12px rgba(65,65,65,0.12);
  background-color: #FBFCFC;
}
.HvTooltip-tooltip-35 p {
  color: #414141;
  width: fit-content;
  display: -webkit-box;
  overflow: hidden;
  box-orient: vertical;
  word-break: break-word;
  text-overflow: ellipsis;
}
.HvTooltip-tooltipMulti-36 {
  width: fit-content;
  display: flex;
  padding: 0;
  max-width: 532px;
  box-shadow: 0 2px 12px rgba(65,65,65,0.12);
  background-color: #FBFCFC;
}
.HvTooltip-tooltipMulti-36 p {
  color: #414141;
  width: fit-content;
  display: -webkit-box;
  overflow: hidden;
  box-orient: vertical;
  text-overflow: ellipsis;
}
.HvTooltip-popper-37 {
  opacity: 1;
}
.HvTooltip-title-38 {
  padding: 15px 20px;
  border-bottom: 3px solid #F0F0F0;
}
.HvTooltip-valuesContainer-39 {
  padding: 20px;
}
.HvTooltip-values-40 {
  display: flex;
  padding-bottom: 10px;
  justify-content: space-between;
}
.HvTooltip-values-40:last-child {
  padding-bottom: 0;
}
.HvTooltip-color-41 {
  width: 10px;
  height: 15px;
}
.HvTooltip-separator-42 {
  width: 10px;
}
.HvTooltip-separatorColor-43 {
  width: 5px;
}
.HvTooltip-valueWrapper-44 {
  padding: 20px;
}

                  </style>
                  <style
                    data-jss=""
                    data-meta="HvTooltip"
                  >
                    
.HvTooltip-root-45 {
  pointer-events: none;
}
.HvTooltip-tooltip-46 {
  width: fit-content;
  display: flex;
  padding: 15px 20px;
  max-width: 532px;
  box-shadow: 0 2px 12px rgba(65,65,65,0.12);
  background-color: #FBFCFC;
}
.HvTooltip-tooltip-46 p {
  color: #414141;
  width: fit-content;
  display: -webkit-box;
  overflow: hidden;
  box-orient: vertical;
  word-break: break-word;
  text-overflow: ellipsis;
}
.HvTooltip-tooltipMulti-47 {
  width: fit-content;
  display: flex;
  padding: 0;
  max-width: 532px;
  box-shadow: 0 2px 12px rgba(65,65,65,0.12);
  background-color: #FBFCFC;
}
.HvTooltip-tooltipMulti-47 p {
  color: #414141;
  width: fit-content;
  display: -webkit-box;
  overflow: hidden;
  box-orient: vertical;
  text-overflow: ellipsis;
}
.HvTooltip-popper-48 {
  opacity: 1;
}
.HvTooltip-title-49 {
  padding: 15px 20px;
  border-bottom: 3px solid #F0F0F0;
}
.HvTooltip-valuesContainer-50 {
  padding: 20px;
}
.HvTooltip-values-51 {
  display: flex;
  padding-bottom: 10px;
  justify-content: space-between;
}
.HvTooltip-values-51:last-child {
  padding-bottom: 0;
}
.HvTooltip-color-52 {
  width: 10px;
  height: 15px;
}
.HvTooltip-separator-53 {
  width: 10px;
}
.HvTooltip-separatorColor-54 {
  width: 5px;
}
.HvTooltip-valueWrapper-55 {
  padding: 20px;
}

                  </style>
                </head>,
                "ctr": 2,
                "insertionPoint": undefined,
                "isSpeedy": false,
                "key": "css",
                "nonce": undefined,
                "prepend": true,
                "tags": Array [
                  <style
                    data-emotion="css"
                    data-s=""
                  >
                    
                    .css-1433tg5-MuiTooltip-popper{z-index:1500;pointer-events:none;}
                  </style>,
                  <style
                    data-emotion="css"
                    data-s=""
                  >
                    
                    .css-179vq5o-MuiPopper-root-MuiTooltip-popper{z-index:1500;pointer-events:none;}
                  </style>,
                ],
              },
            }
          }
          isStringTag={false}
          serialized={
            Object {
              "map": undefined,
              "name": "1433tg5-MuiTooltip-popper",
              "next": undefined,
              "styles": "label:MuiTooltip-popper;z-index:1500;pointer-events:none;",
              "toString": [Function],
            }
          }
        />
        <ForwardRef(Popper)
          anchorEl={
            <button
              class=""
              data-mui-internal-clone-element="true"
              id="testChild"
              type="submit"
            >
              Hello World
            </button>
          }
          className="HvTooltip-popper-48 MuiTooltip-popper MuiTooltip-popperInteractive css-1433tg5-MuiTooltip-popper"
          id="mui-5"
          onBlur={[Function]}
          onFocus={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          open={false}
          placement="top"
          popperOptions={
            Object {
              "modifiers": Array [
                Object {
                  "enabled": false,
                  "name": "arrow",
                  "options": Object {
                    "element": null,
                    "padding": 4,
                  },
                },
              ],
            }
          }
          popperRef={
            Object {
              "current": undefined,
            }
          }
          transition={true}
        >
          <MuiPopperRoot
            anchorEl={
              <button
                class=""
                data-mui-internal-clone-element="true"
                id="testChild"
                type="submit"
              >
                Hello World
              </button>
            }
            className="HvTooltip-popper-48 MuiTooltip-popper MuiTooltip-popperInteractive css-1433tg5-MuiTooltip-popper"
            direction="ltr"
            id="mui-5"
            onBlur={[Function]}
            onFocus={[Function]}
            onMouseLeave={[Function]}
            onMouseOver={[Function]}
            open={false}
            placement="top"
            popperOptions={
              Object {
                "modifiers": Array [
                  Object {
                    "enabled": false,
                    "name": "arrow",
                    "options": Object {
                      "element": null,
                      "padding": 4,
                    },
                  },
                ],
              }
            }
            popperRef={
              Object {
                "current": undefined,
              }
            }
            transition={true}
          >
            <Insertion
              cache={
                Object {
                  "insert": [Function],
                  "inserted": Object {
                    "1433tg5-MuiTooltip-popper": true,
                    "179vq5o-MuiPopper-root-MuiTooltip-popper": true,
                  },
                  "key": "css",
                  "nonce": undefined,
                  "registered": Object {
                    "css-1433tg5-MuiTooltip-popper": "label:MuiTooltip-popper;z-index:1500;pointer-events:none;",
                    "css-179vq5o-MuiPopper-root-MuiTooltip-popper": "label:MuiPopper-root;label:MuiTooltip-popper;z-index:1500;pointer-events:none;;",
                  },
                  "sheet": StyleSheet {
                    "_alreadyInsertedOrderInsensitiveRule": true,
                    "_insertTag": [Function],
                    "before": null,
                    "container": <head>
                      <style
                        data-emotion="css"
                        data-s=""
                      >
                        
                        .css-1433tg5-MuiTooltip-popper{z-index:1500;pointer-events:none;}
                      </style>
                      <style
                        data-emotion="css"
                        data-s=""
                      >
                        
                        .css-179vq5o-MuiPopper-root-MuiTooltip-popper{z-index:1500;pointer-events:none;}
                      </style>
                      <style
                        data-jss=""
                        data-meta="HvTooltip"
                      >
                        
.HvTooltip-root-1 {
  pointer-events: none;
}
.HvTooltip-tooltip-2 {
  width: fit-content;
  display: flex;
  padding: 15px 20px;
  max-width: 532px;
  box-shadow: 0 2px 12px rgba(65,65,65,0.12);
  background-color: #FBFCFC;
}
.HvTooltip-tooltip-2 p {
  color: #414141;
  width: fit-content;
  display: -webkit-box;
  overflow: hidden;
  box-orient: vertical;
  word-break: break-word;
  text-overflow: ellipsis;
}
.HvTooltip-tooltipMulti-3 {
  width: fit-content;
  display: flex;
  padding: 0;
  max-width: 532px;
  box-shadow: 0 2px 12px rgba(65,65,65,0.12);
  background-color: #FBFCFC;
}
.HvTooltip-tooltipMulti-3 p {
  color: #414141;
  width: fit-content;
  display: -webkit-box;
  overflow: hidden;
  box-orient: vertical;
  text-overflow: ellipsis;
}
.HvTooltip-popper-4 {
  opacity: 1;
}
.HvTooltip-title-5 {
  padding: 15px 20px;
  border-bottom: 3px solid #F0F0F0;
}
.HvTooltip-valuesContainer-6 {
  padding: 20px;
}
.HvTooltip-values-7 {
  display: flex;
  padding-bottom: 10px;
  justify-content: space-between;
}
.HvTooltip-values-7:last-child {
  padding-bottom: 0;
}
.HvTooltip-color-8 {
  width: 10px;
  height: 15px;
}
.HvTooltip-separator-9 {
  width: 10px;
}
.HvTooltip-separatorColor-10 {
  width: 5px;
}
.HvTooltip-valueWrapper-11 {
  padding: 20px;
}

                      </style>
                      <style
                        data-jss=""
                        data-meta="HvTooltip"
                      >
                        
.HvTooltip-root-12 {
  pointer-events: none;
}
.HvTooltip-tooltip-13 {
  width: fit-content;
  display: flex;
  padding: 15px 20px;
  max-width: 532px;
  box-shadow: 0 2px 12px rgba(65,65,65,0.12);
  background-color: #FBFCFC;
}
.HvTooltip-tooltip-13 p {
  color: #414141;
  width: fit-content;
  display: -webkit-box;
  overflow: hidden;
  box-orient: vertical;
  word-break: break-word;
  text-overflow: ellipsis;
}
.HvTooltip-tooltipMulti-14 {
  width: fit-content;
  display: flex;
  padding: 0;
  max-width: 532px;
  box-shadow: 0 2px 12px rgba(65,65,65,0.12);
  background-color: #FBFCFC;
}
.HvTooltip-tooltipMulti-14 p {
  color: #414141;
  width: fit-content;
  display: -webkit-box;
  overflow: hidden;
  box-orient: vertical;
  text-overflow: ellipsis;
}
.HvTooltip-popper-15 {
  opacity: 1;
}
.HvTooltip-title-16 {
  padding: 15px 20px;
  border-bottom: 3px solid #F0F0F0;
}
.HvTooltip-valuesContainer-17 {
  padding: 20px;
}
.HvTooltip-values-18 {
  display: flex;
  padding-bottom: 10px;
  justify-content: space-between;
}
.HvTooltip-values-18:last-child {
  padding-bottom: 0;
}
.HvTooltip-color-19 {
  width: 10px;
  height: 15px;
}
.HvTooltip-separator-20 {
  width: 10px;
}
.HvTooltip-separatorColor-21 {
  width: 5px;
}
.HvTooltip-valueWrapper-22 {
  padding: 20px;
}

                      </style>
                      <style
                        data-jss=""
                        data-meta="HvTooltip"
                      >
                        
.HvTooltip-root-23 {
  pointer-events: none;
}
.HvTooltip-tooltip-24 {
  width: fit-content;
  display: flex;
  padding: 15px 20px;
  max-width: 532px;
  box-shadow: 0 2px 12px rgba(65,65,65,0.12);
  background-color: #FBFCFC;
}
.HvTooltip-tooltip-24 p {
  color: #414141;
  width: fit-content;
  display: -webkit-box;
  overflow: hidden;
  box-orient: vertical;
  word-break: break-word;
  text-overflow: ellipsis;
}
.HvTooltip-tooltipMulti-25 {
  width: fit-content;
  display: flex;
  padding: 0;
  max-width: 532px;
  box-shadow: 0 2px 12px rgba(65,65,65,0.12);
  background-color: #FBFCFC;
}
.HvTooltip-tooltipMulti-25 p {
  color: #414141;
  width: fit-content;
  display: -webkit-box;
  overflow: hidden;
  box-orient: vertical;
  text-overflow: ellipsis;
}
.HvTooltip-popper-26 {
  opacity: 1;
}
.HvTooltip-title-27 {
  padding: 15px 20px;
  border-bottom: 3px solid #F0F0F0;
}
.HvTooltip-valuesContainer-28 {
  padding: 20px;
}
.HvTooltip-values-29 {
  display: flex;
  padding-bottom: 10px;
  justify-content: space-between;
}
.HvTooltip-values-29:last-child {
  padding-bottom: 0;
}
.HvTooltip-color-30 {
  width: 10px;
  height: 15px;
}
.HvTooltip-separator-31 {
  width: 10px;
}
.HvTooltip-separatorColor-32 {
  width: 5px;
}
.HvTooltip-valueWrapper-33 {
  padding: 20px;
}

                      </style>
                      <style
                        data-jss=""
                        data-meta="HvTooltip"
                      >
                        
.HvTooltip-root-34 {
  pointer-events: none;
}
.HvTooltip-tooltip-35 {
  width: fit-content;
  display: flex;
  padding: 15px 20px;
  max-width: 532px;
  box-shadow: 0 2px 12px rgba(65,65,65,0.12);
  background-color: #FBFCFC;
}
.HvTooltip-tooltip-35 p {
  color: #414141;
  width: fit-content;
  display: -webkit-box;
  overflow: hidden;
  box-orient: vertical;
  word-break: break-word;
  text-overflow: ellipsis;
}
.HvTooltip-tooltipMulti-36 {
  width: fit-content;
  display: flex;
  padding: 0;
  max-width: 532px;
  box-shadow: 0 2px 12px rgba(65,65,65,0.12);
  background-color: #FBFCFC;
}
.HvTooltip-tooltipMulti-36 p {
  color: #414141;
  width: fit-content;
  display: -webkit-box;
  overflow: hidden;
  box-orient: vertical;
  text-overflow: ellipsis;
}
.HvTooltip-popper-37 {
  opacity: 1;
}
.HvTooltip-title-38 {
  padding: 15px 20px;
  border-bottom: 3px solid #F0F0F0;
}
.HvTooltip-valuesContainer-39 {
  padding: 20px;
}
.HvTooltip-values-40 {
  display: flex;
  padding-bottom: 10px;
  justify-content: space-between;
}
.HvTooltip-values-40:last-child {
  padding-bottom: 0;
}
.HvTooltip-color-41 {
  width: 10px;
  height: 15px;
}
.HvTooltip-separator-42 {
  width: 10px;
}
.HvTooltip-separatorColor-43 {
  width: 5px;
}
.HvTooltip-valueWrapper-44 {
  padding: 20px;
}

                      </style>
                      <style
                        data-jss=""
                        data-meta="HvTooltip"
                      >
                        
.HvTooltip-root-45 {
  pointer-events: none;
}
.HvTooltip-tooltip-46 {
  width: fit-content;
  display: flex;
  padding: 15px 20px;
  max-width: 532px;
  box-shadow: 0 2px 12px rgba(65,65,65,0.12);
  background-color: #FBFCFC;
}
.HvTooltip-tooltip-46 p {
  color: #414141;
  width: fit-content;
  display: -webkit-box;
  overflow: hidden;
  box-orient: vertical;
  word-break: break-word;
  text-overflow: ellipsis;
}
.HvTooltip-tooltipMulti-47 {
  width: fit-content;
  display: flex;
  padding: 0;
  max-width: 532px;
  box-shadow: 0 2px 12px rgba(65,65,65,0.12);
  background-color: #FBFCFC;
}
.HvTooltip-tooltipMulti-47 p {
  color: #414141;
  width: fit-content;
  display: -webkit-box;
  overflow: hidden;
  box-orient: vertical;
  text-overflow: ellipsis;
}
.HvTooltip-popper-48 {
  opacity: 1;
}
.HvTooltip-title-49 {
  padding: 15px 20px;
  border-bottom: 3px solid #F0F0F0;
}
.HvTooltip-valuesContainer-50 {
  padding: 20px;
}
.HvTooltip-values-51 {
  display: flex;
  padding-bottom: 10px;
  justify-content: space-between;
}
.HvTooltip-values-51:last-child {
  padding-bottom: 0;
}
.HvTooltip-color-52 {
  width: 10px;
  height: 15px;
}
.HvTooltip-separator-53 {
  width: 10px;
}
.HvTooltip-separatorColor-54 {
  width: 5px;
}
.HvTooltip-valueWrapper-55 {
  padding: 20px;
}

                      </style>
                    </head>,
                    "ctr": 2,
                    "insertionPoint": undefined,
                    "isSpeedy": false,
                    "key": "css",
                    "nonce": undefined,
                    "prepend": true,
                    "tags": Array [
                      <style
                        data-emotion="css"
                        data-s=""
                      >
                        
                        .css-1433tg5-MuiTooltip-popper{z-index:1500;pointer-events:none;}
                      </style>,
                      <style
                        data-emotion="css"
                        data-s=""
                      >
                        
                        .css-179vq5o-MuiPopper-root-MuiTooltip-popper{z-index:1500;pointer-events:none;}
                      </style>,
                    ],
                  },
                }
              }
              isStringTag={false}
              serialized={
                Object {
                  "map": undefined,
                  "name": "179vq5o-MuiPopper-root-MuiTooltip-popper",
                  "next": undefined,
                  "styles": "label:MuiPopper-root;label:MuiTooltip-popper;z-index:1500;pointer-events:none;;",
                  "toString": [Function],
                }
              }
            />
            <ForwardRef(PopperUnstyled)
              anchorEl={
                <button
                  class=""
                  data-mui-internal-clone-element="true"
                  id="testChild"
                  type="submit"
                >
                  Hello World
                </button>
              }
              className="HvTooltip-popper-48 MuiTooltip-popper MuiTooltip-popperInteractive css-179vq5o-MuiPopper-root-MuiTooltip-popper"
              direction="ltr"
              id="mui-5"
              onBlur={[Function]}
              onFocus={[Function]}
              onMouseLeave={[Function]}
              onMouseOver={[Function]}
              open={false}
              placement="top"
              popperOptions={
                Object {
                  "modifiers": Array [
                    Object {
                      "enabled": false,
                      "name": "arrow",
                      "options": Object {
                        "element": null,
                        "padding": 4,
                      },
                    },
                  ],
                }
              }
              popperRef={
                Object {
                  "current": undefined,
                }
              }
              transition={true}
            />
          </MuiPopperRoot>
        </ForwardRef(Popper)>
      </MuiTooltipPopper>
    </ForwardRef(Tooltip)>
  </ForwardRef>
</WithStyles(ForwardRef)>
`;

exports[`Multi Line Tooltip - With Header should render multiple line tooltip with header correctly 1`] = `
<WithStyles(ForwardRef)
  title={
    <div>
      <WithStyles(ForwardRef)
        variant="highlightText"
      >
        January
      </WithStyles(ForwardRef)>
      <div>
        <WithStyles(ForwardRef)
          variant="highlightText"
        >
          Sales
        </WithStyles(ForwardRef)>
        <div />
        <WithStyles(ForwardRef)>
          52,000 units
        </WithStyles(ForwardRef)>
      </div>
      <div>
        <WithStyles(ForwardRef)
          variant="highlightText"
        >
          Profit
        </WithStyles(ForwardRef)>
        <div />
        <WithStyles(ForwardRef)>
          50%
        </WithStyles(ForwardRef)>
      </div>
    </div>
  }
  useSingle={false}
>
  <ForwardRef
    classes={
      Object {
        "color": "HvTooltip-color-85",
        "popper": "HvTooltip-popper-81",
        "root": "HvTooltip-root-78",
        "separator": "HvTooltip-separator-86",
        "separatorColor": "HvTooltip-separatorColor-87",
        "title": "HvTooltip-title-82",
        "tooltip": "HvTooltip-tooltip-79",
        "tooltipMulti": "HvTooltip-tooltipMulti-80",
        "valueWrapper": "HvTooltip-valueWrapper-88",
        "values": "HvTooltip-values-84",
        "valuesContainer": "HvTooltip-valuesContainer-83",
      }
    }
    title={
      <div>
        <WithStyles(ForwardRef)
          variant="highlightText"
        >
          January
        </WithStyles(ForwardRef)>
        <div>
          <WithStyles(ForwardRef)
            variant="highlightText"
          >
            Sales
          </WithStyles(ForwardRef)>
          <div />
          <WithStyles(ForwardRef)>
            52,000 units
          </WithStyles(ForwardRef)>
        </div>
        <div>
          <WithStyles(ForwardRef)
            variant="highlightText"
          >
            Profit
          </WithStyles(ForwardRef)>
          <div />
          <WithStyles(ForwardRef)>
            50%
          </WithStyles(ForwardRef)>
        </div>
      </div>
    }
    useSingle={false}
  >
    <ForwardRef(Tooltip)
      TransitionComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "propTypes": Object {
            "addEndListener": [Function],
            "appear": [Function],
            "children": [Function],
            "easing": [Function],
            "in": [Function],
            "onEnter": [Function],
            "onEntered": [Function],
            "onEntering": [Function],
            "onExit": [Function],
            "onExited": [Function],
            "onExiting": [Function],
            "style": [Function],
            "timeout": [Function],
          },
          "render": [Function],
        }
      }
      TransitionProps={
        Object {
          "timeout": 400,
        }
      }
      classes={
        Object {
          "popper": "HvTooltip-popper-81",
          "tooltip": "HvTooltip-tooltipMulti-80",
        }
      }
      enterDelay={300}
      placement="top"
      title={
        <div>
          <WithStyles(ForwardRef)
            variant="highlightText"
          >
            January
          </WithStyles(ForwardRef)>
          <div>
            <WithStyles(ForwardRef)
              variant="highlightText"
            >
              Sales
            </WithStyles(ForwardRef)>
            <div />
            <WithStyles(ForwardRef)>
              52,000 units
            </WithStyles(ForwardRef)>
          </div>
          <div>
            <WithStyles(ForwardRef)
              variant="highlightText"
            >
              Profit
            </WithStyles(ForwardRef)>
            <div />
            <WithStyles(ForwardRef)>
              50%
            </WithStyles(ForwardRef)>
          </div>
        </div>
      }
    >
      <button
        aria-label={null}
        aria-labelledby={null}
        className=""
        data-mui-internal-clone-element={true}
        id="testChild"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
        onTouchEnd={[Function]}
        onTouchStart={[Function]}
        type="submit"
      >
        Hello World
      </button>
      <MuiTooltipPopper
        anchorEl={
          <button
            class=""
            data-mui-internal-clone-element="true"
            id="testChild"
            type="submit"
          >
            Hello World
          </button>
        }
        as={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "propTypes": Object {
              "anchorEl": [Function],
              "children": [Function],
              "container": [Function],
              "disablePortal": [Function],
              "keepMounted": [Function],
              "modifiers": [Function],
              "open": [Function],
              "placement": [Function],
              "popperOptions": [Function],
              "popperRef": [Function],
              "sx": [Function],
              "transition": [Function],
            },
            "render": [Function],
          }
        }
        className="HvTooltip-popper-81 MuiTooltip-popper MuiTooltip-popperInteractive"
        id="mui-8"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
        open={false}
        ownerState={
          Object {
            "PopperComponentProp": undefined,
            "TransitionComponent": Object {
              "$$typeof": Symbol(react.forward_ref),
              "propTypes": Object {
                "addEndListener": [Function],
                "appear": [Function],
                "children": [Function],
                "easing": [Function],
                "in": [Function],
                "onEnter": [Function],
                "onEntered": [Function],
                "onEntering": [Function],
                "onExit": [Function],
                "onExited": [Function],
                "onExiting": [Function],
                "style": [Function],
                "timeout": [Function],
              },
              "render": [Function],
            },
            "TransitionProps": Object {
              "timeout": 400,
            },
            "arrow": false,
            "children": <button
              id="testChild"
              type="submit"
            >
              Hello World
            </button>,
            "className": undefined,
            "classes": Object {
              "popper": "HvTooltip-popper-81",
              "tooltip": "HvTooltip-tooltipMulti-80",
            },
            "disableInteractive": false,
            "enterDelay": 300,
            "isRtl": false,
            "open": undefined,
            "placement": "top",
            "title": <div>
              <WithStyles(ForwardRef)
                variant="highlightText"
              >
                January
              </WithStyles(ForwardRef)>
              <div>
                <WithStyles(ForwardRef)
                  variant="highlightText"
                >
                  Sales
                </WithStyles(ForwardRef)>
                <div />
                <WithStyles(ForwardRef)>
                  52,000 units
                </WithStyles(ForwardRef)>
              </div>
              <div>
                <WithStyles(ForwardRef)
                  variant="highlightText"
                >
                  Profit
                </WithStyles(ForwardRef)>
                <div />
                <WithStyles(ForwardRef)>
                  50%
                </WithStyles(ForwardRef)>
              </div>
            </div>,
            "touch": false,
          }
        }
        placement="top"
        popperOptions={
          Object {
            "modifiers": Array [
              Object {
                "enabled": false,
                "name": "arrow",
                "options": Object {
                  "element": null,
                  "padding": 4,
                },
              },
            ],
          }
        }
        popperRef={
          Object {
            "current": undefined,
          }
        }
        transition={true}
      >
        <Insertion
          cache={
            Object {
              "insert": [Function],
              "inserted": Object {
                "1433tg5-MuiTooltip-popper": true,
                "179vq5o-MuiPopper-root-MuiTooltip-popper": true,
              },
              "key": "css",
              "nonce": undefined,
              "registered": Object {
                "css-1433tg5-MuiTooltip-popper": "label:MuiTooltip-popper;z-index:1500;pointer-events:none;",
                "css-179vq5o-MuiPopper-root-MuiTooltip-popper": "label:MuiPopper-root;label:MuiTooltip-popper;z-index:1500;pointer-events:none;;",
              },
              "sheet": StyleSheet {
                "_alreadyInsertedOrderInsensitiveRule": true,
                "_insertTag": [Function],
                "before": null,
                "container": <head>
                  <style
                    data-emotion="css"
                    data-s=""
                  >
                    
                    .css-1433tg5-MuiTooltip-popper{z-index:1500;pointer-events:none;}
                  </style>
                  <style
                    data-emotion="css"
                    data-s=""
                  >
                    
                    .css-179vq5o-MuiPopper-root-MuiTooltip-popper{z-index:1500;pointer-events:none;}
                  </style>
                  <style
                    data-jss=""
                    data-meta="HvTooltip"
                  >
                    
.HvTooltip-root-1 {
  pointer-events: none;
}
.HvTooltip-tooltip-2 {
  width: fit-content;
  display: flex;
  padding: 15px 20px;
  max-width: 532px;
  box-shadow: 0 2px 12px rgba(65,65,65,0.12);
  background-color: #FBFCFC;
}
.HvTooltip-tooltip-2 p {
  color: #414141;
  width: fit-content;
  display: -webkit-box;
  overflow: hidden;
  box-orient: vertical;
  word-break: break-word;
  text-overflow: ellipsis;
}
.HvTooltip-tooltipMulti-3 {
  width: fit-content;
  display: flex;
  padding: 0;
  max-width: 532px;
  box-shadow: 0 2px 12px rgba(65,65,65,0.12);
  background-color: #FBFCFC;
}
.HvTooltip-tooltipMulti-3 p {
  color: #414141;
  width: fit-content;
  display: -webkit-box;
  overflow: hidden;
  box-orient: vertical;
  text-overflow: ellipsis;
}
.HvTooltip-popper-4 {
  opacity: 1;
}
.HvTooltip-title-5 {
  padding: 15px 20px;
  border-bottom: 3px solid #F0F0F0;
}
.HvTooltip-valuesContainer-6 {
  padding: 20px;
}
.HvTooltip-values-7 {
  display: flex;
  padding-bottom: 10px;
  justify-content: space-between;
}
.HvTooltip-values-7:last-child {
  padding-bottom: 0;
}
.HvTooltip-color-8 {
  width: 10px;
  height: 15px;
}
.HvTooltip-separator-9 {
  width: 10px;
}
.HvTooltip-separatorColor-10 {
  width: 5px;
}
.HvTooltip-valueWrapper-11 {
  padding: 20px;
}

                  </style>
                  <style
                    data-jss=""
                    data-meta="HvTooltip"
                  >
                    
.HvTooltip-root-12 {
  pointer-events: none;
}
.HvTooltip-tooltip-13 {
  width: fit-content;
  display: flex;
  padding: 15px 20px;
  max-width: 532px;
  box-shadow: 0 2px 12px rgba(65,65,65,0.12);
  background-color: #FBFCFC;
}
.HvTooltip-tooltip-13 p {
  color: #414141;
  width: fit-content;
  display: -webkit-box;
  overflow: hidden;
  box-orient: vertical;
  word-break: break-word;
  text-overflow: ellipsis;
}
.HvTooltip-tooltipMulti-14 {
  width: fit-content;
  display: flex;
  padding: 0;
  max-width: 532px;
  box-shadow: 0 2px 12px rgba(65,65,65,0.12);
  background-color: #FBFCFC;
}
.HvTooltip-tooltipMulti-14 p {
  color: #414141;
  width: fit-content;
  display: -webkit-box;
  overflow: hidden;
  box-orient: vertical;
  text-overflow: ellipsis;
}
.HvTooltip-popper-15 {
  opacity: 1;
}
.HvTooltip-title-16 {
  padding: 15px 20px;
  border-bottom: 3px solid #F0F0F0;
}
.HvTooltip-valuesContainer-17 {
  padding: 20px;
}
.HvTooltip-values-18 {
  display: flex;
  padding-bottom: 10px;
  justify-content: space-between;
}
.HvTooltip-values-18:last-child {
  padding-bottom: 0;
}
.HvTooltip-color-19 {
  width: 10px;
  height: 15px;
}
.HvTooltip-separator-20 {
  width: 10px;
}
.HvTooltip-separatorColor-21 {
  width: 5px;
}
.HvTooltip-valueWrapper-22 {
  padding: 20px;
}

                  </style>
                  <style
                    data-jss=""
                    data-meta="HvTooltip"
                  >
                    
.HvTooltip-root-23 {
  pointer-events: none;
}
.HvTooltip-tooltip-24 {
  width: fit-content;
  display: flex;
  padding: 15px 20px;
  max-width: 532px;
  box-shadow: 0 2px 12px rgba(65,65,65,0.12);
  background-color: #FBFCFC;
}
.HvTooltip-tooltip-24 p {
  color: #414141;
  width: fit-content;
  display: -webkit-box;
  overflow: hidden;
  box-orient: vertical;
  word-break: break-word;
  text-overflow: ellipsis;
}
.HvTooltip-tooltipMulti-25 {
  width: fit-content;
  display: flex;
  padding: 0;
  max-width: 532px;
  box-shadow: 0 2px 12px rgba(65,65,65,0.12);
  background-color: #FBFCFC;
}
.HvTooltip-tooltipMulti-25 p {
  color: #414141;
  width: fit-content;
  display: -webkit-box;
  overflow: hidden;
  box-orient: vertical;
  text-overflow: ellipsis;
}
.HvTooltip-popper-26 {
  opacity: 1;
}
.HvTooltip-title-27 {
  padding: 15px 20px;
  border-bottom: 3px solid #F0F0F0;
}
.HvTooltip-valuesContainer-28 {
  padding: 20px;
}
.HvTooltip-values-29 {
  display: flex;
  padding-bottom: 10px;
  justify-content: space-between;
}
.HvTooltip-values-29:last-child {
  padding-bottom: 0;
}
.HvTooltip-color-30 {
  width: 10px;
  height: 15px;
}
.HvTooltip-separator-31 {
  width: 10px;
}
.HvTooltip-separatorColor-32 {
  width: 5px;
}
.HvTooltip-valueWrapper-33 {
  padding: 20px;
}

                  </style>
                  <style
                    data-jss=""
                    data-meta="HvTooltip"
                  >
                    
.HvTooltip-root-34 {
  pointer-events: none;
}
.HvTooltip-tooltip-35 {
  width: fit-content;
  display: flex;
  padding: 15px 20px;
  max-width: 532px;
  box-shadow: 0 2px 12px rgba(65,65,65,0.12);
  background-color: #FBFCFC;
}
.HvTooltip-tooltip-35 p {
  color: #414141;
  width: fit-content;
  display: -webkit-box;
  overflow: hidden;
  box-orient: vertical;
  word-break: break-word;
  text-overflow: ellipsis;
}
.HvTooltip-tooltipMulti-36 {
  width: fit-content;
  display: flex;
  padding: 0;
  max-width: 532px;
  box-shadow: 0 2px 12px rgba(65,65,65,0.12);
  background-color: #FBFCFC;
}
.HvTooltip-tooltipMulti-36 p {
  color: #414141;
  width: fit-content;
  display: -webkit-box;
  overflow: hidden;
  box-orient: vertical;
  text-overflow: ellipsis;
}
.HvTooltip-popper-37 {
  opacity: 1;
}
.HvTooltip-title-38 {
  padding: 15px 20px;
  border-bottom: 3px solid #F0F0F0;
}
.HvTooltip-valuesContainer-39 {
  padding: 20px;
}
.HvTooltip-values-40 {
  display: flex;
  padding-bottom: 10px;
  justify-content: space-between;
}
.HvTooltip-values-40:last-child {
  padding-bottom: 0;
}
.HvTooltip-color-41 {
  width: 10px;
  height: 15px;
}
.HvTooltip-separator-42 {
  width: 10px;
}
.HvTooltip-separatorColor-43 {
  width: 5px;
}
.HvTooltip-valueWrapper-44 {
  padding: 20px;
}

                  </style>
                  <style
                    data-jss=""
                    data-meta="HvTooltip"
                  >
                    
.HvTooltip-root-45 {
  pointer-events: none;
}
.HvTooltip-tooltip-46 {
  width: fit-content;
  display: flex;
  padding: 15px 20px;
  max-width: 532px;
  box-shadow: 0 2px 12px rgba(65,65,65,0.12);
  background-color: #FBFCFC;
}
.HvTooltip-tooltip-46 p {
  color: #414141;
  width: fit-content;
  display: -webkit-box;
  overflow: hidden;
  box-orient: vertical;
  word-break: break-word;
  text-overflow: ellipsis;
}
.HvTooltip-tooltipMulti-47 {
  width: fit-content;
  display: flex;
  padding: 0;
  max-width: 532px;
  box-shadow: 0 2px 12px rgba(65,65,65,0.12);
  background-color: #FBFCFC;
}
.HvTooltip-tooltipMulti-47 p {
  color: #414141;
  width: fit-content;
  display: -webkit-box;
  overflow: hidden;
  box-orient: vertical;
  text-overflow: ellipsis;
}
.HvTooltip-popper-48 {
  opacity: 1;
}
.HvTooltip-title-49 {
  padding: 15px 20px;
  border-bottom: 3px solid #F0F0F0;
}
.HvTooltip-valuesContainer-50 {
  padding: 20px;
}
.HvTooltip-values-51 {
  display: flex;
  padding-bottom: 10px;
  justify-content: space-between;
}
.HvTooltip-values-51:last-child {
  padding-bottom: 0;
}
.HvTooltip-color-52 {
  width: 10px;
  height: 15px;
}
.HvTooltip-separator-53 {
  width: 10px;
}
.HvTooltip-separatorColor-54 {
  width: 5px;
}
.HvTooltip-valueWrapper-55 {
  padding: 20px;
}

                  </style>
                  <style
                    data-jss=""
                    data-meta="HvTooltip"
                  >
                    
.HvTooltip-root-56 {
  pointer-events: none;
}
.HvTooltip-tooltip-57 {
  width: fit-content;
  display: flex;
  padding: 15px 20px;
  max-width: 532px;
  box-shadow: 0 2px 12px rgba(65,65,65,0.12);
  background-color: #FBFCFC;
}
.HvTooltip-tooltip-57 p {
  color: #414141;
  width: fit-content;
  display: -webkit-box;
  overflow: hidden;
  box-orient: vertical;
  word-break: break-word;
  text-overflow: ellipsis;
}
.HvTooltip-tooltipMulti-58 {
  width: fit-content;
  display: flex;
  padding: 0;
  max-width: 532px;
  box-shadow: 0 2px 12px rgba(65,65,65,0.12);
  background-color: #FBFCFC;
}
.HvTooltip-tooltipMulti-58 p {
  color: #414141;
  width: fit-content;
  display: -webkit-box;
  overflow: hidden;
  box-orient: vertical;
  text-overflow: ellipsis;
}
.HvTooltip-popper-59 {
  opacity: 1;
}
.HvTooltip-title-60 {
  padding: 15px 20px;
  border-bottom: 3px solid #F0F0F0;
}
.HvTooltip-valuesContainer-61 {
  padding: 20px;
}
.HvTooltip-values-62 {
  display: flex;
  padding-bottom: 10px;
  justify-content: space-between;
}
.HvTooltip-values-62:last-child {
  padding-bottom: 0;
}
.HvTooltip-color-63 {
  width: 10px;
  height: 15px;
}
.HvTooltip-separator-64 {
  width: 10px;
}
.HvTooltip-separatorColor-65 {
  width: 5px;
}
.HvTooltip-valueWrapper-66 {
  padding: 20px;
}

                  </style>
                  <style
                    data-jss=""
                    data-meta="HvTooltip"
                  >
                    
.HvTooltip-root-67 {
  pointer-events: none;
}
.HvTooltip-tooltip-68 {
  width: fit-content;
  display: flex;
  padding: 15px 20px;
  max-width: 532px;
  box-shadow: 0 2px 12px rgba(65,65,65,0.12);
  background-color: #FBFCFC;
}
.HvTooltip-tooltip-68 p {
  color: #414141;
  width: fit-content;
  display: -webkit-box;
  overflow: hidden;
  box-orient: vertical;
  word-break: break-word;
  text-overflow: ellipsis;
}
.HvTooltip-tooltipMulti-69 {
  width: fit-content;
  display: flex;
  padding: 0;
  max-width: 532px;
  box-shadow: 0 2px 12px rgba(65,65,65,0.12);
  background-color: #FBFCFC;
}
.HvTooltip-tooltipMulti-69 p {
  color: #414141;
  width: fit-content;
  display: -webkit-box;
  overflow: hidden;
  box-orient: vertical;
  text-overflow: ellipsis;
}
.HvTooltip-popper-70 {
  opacity: 1;
}
.HvTooltip-title-71 {
  padding: 15px 20px;
  border-bottom: 3px solid #F0F0F0;
}
.HvTooltip-valuesContainer-72 {
  padding: 20px;
}
.HvTooltip-values-73 {
  display: flex;
  padding-bottom: 10px;
  justify-content: space-between;
}
.HvTooltip-values-73:last-child {
  padding-bottom: 0;
}
.HvTooltip-color-74 {
  width: 10px;
  height: 15px;
}
.HvTooltip-separator-75 {
  width: 10px;
}
.HvTooltip-separatorColor-76 {
  width: 5px;
}
.HvTooltip-valueWrapper-77 {
  padding: 20px;
}

                  </style>
                  <style
                    data-jss=""
                    data-meta="HvTooltip"
                  >
                    
.HvTooltip-root-78 {
  pointer-events: none;
}
.HvTooltip-tooltip-79 {
  width: fit-content;
  display: flex;
  padding: 15px 20px;
  max-width: 532px;
  box-shadow: 0 2px 12px rgba(65,65,65,0.12);
  background-color: #FBFCFC;
}
.HvTooltip-tooltip-79 p {
  color: #414141;
  width: fit-content;
  display: -webkit-box;
  overflow: hidden;
  box-orient: vertical;
  word-break: break-word;
  text-overflow: ellipsis;
}
.HvTooltip-tooltipMulti-80 {
  width: fit-content;
  display: flex;
  padding: 0;
  max-width: 532px;
  box-shadow: 0 2px 12px rgba(65,65,65,0.12);
  background-color: #FBFCFC;
}
.HvTooltip-tooltipMulti-80 p {
  color: #414141;
  width: fit-content;
  display: -webkit-box;
  overflow: hidden;
  box-orient: vertical;
  text-overflow: ellipsis;
}
.HvTooltip-popper-81 {
  opacity: 1;
}
.HvTooltip-title-82 {
  padding: 15px 20px;
  border-bottom: 3px solid #F0F0F0;
}
.HvTooltip-valuesContainer-83 {
  padding: 20px;
}
.HvTooltip-values-84 {
  display: flex;
  padding-bottom: 10px;
  justify-content: space-between;
}
.HvTooltip-values-84:last-child {
  padding-bottom: 0;
}
.HvTooltip-color-85 {
  width: 10px;
  height: 15px;
}
.HvTooltip-separator-86 {
  width: 10px;
}
.HvTooltip-separatorColor-87 {
  width: 5px;
}
.HvTooltip-valueWrapper-88 {
  padding: 20px;
}

                  </style>
                </head>,
                "ctr": 2,
                "insertionPoint": undefined,
                "isSpeedy": false,
                "key": "css",
                "nonce": undefined,
                "prepend": true,
                "tags": Array [
                  <style
                    data-emotion="css"
                    data-s=""
                  >
                    
                    .css-1433tg5-MuiTooltip-popper{z-index:1500;pointer-events:none;}
                  </style>,
                  <style
                    data-emotion="css"
                    data-s=""
                  >
                    
                    .css-179vq5o-MuiPopper-root-MuiTooltip-popper{z-index:1500;pointer-events:none;}
                  </style>,
                ],
              },
            }
          }
          isStringTag={false}
          serialized={
            Object {
              "map": undefined,
              "name": "1433tg5-MuiTooltip-popper",
              "next": undefined,
              "styles": "label:MuiTooltip-popper;z-index:1500;pointer-events:none;",
              "toString": [Function],
            }
          }
        />
        <ForwardRef(Popper)
          anchorEl={
            <button
              class=""
              data-mui-internal-clone-element="true"
              id="testChild"
              type="submit"
            >
              Hello World
            </button>
          }
          className="HvTooltip-popper-81 MuiTooltip-popper MuiTooltip-popperInteractive css-1433tg5-MuiTooltip-popper"
          id="mui-8"
          onBlur={[Function]}
          onFocus={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          open={false}
          placement="top"
          popperOptions={
            Object {
              "modifiers": Array [
                Object {
                  "enabled": false,
                  "name": "arrow",
                  "options": Object {
                    "element": null,
                    "padding": 4,
                  },
                },
              ],
            }
          }
          popperRef={
            Object {
              "current": undefined,
            }
          }
          transition={true}
        >
          <MuiPopperRoot
            anchorEl={
              <button
                class=""
                data-mui-internal-clone-element="true"
                id="testChild"
                type="submit"
              >
                Hello World
              </button>
            }
            className="HvTooltip-popper-81 MuiTooltip-popper MuiTooltip-popperInteractive css-1433tg5-MuiTooltip-popper"
            direction="ltr"
            id="mui-8"
            onBlur={[Function]}
            onFocus={[Function]}
            onMouseLeave={[Function]}
            onMouseOver={[Function]}
            open={false}
            placement="top"
            popperOptions={
              Object {
                "modifiers": Array [
                  Object {
                    "enabled": false,
                    "name": "arrow",
                    "options": Object {
                      "element": null,
                      "padding": 4,
                    },
                  },
                ],
              }
            }
            popperRef={
              Object {
                "current": undefined,
              }
            }
            transition={true}
          >
            <Insertion
              cache={
                Object {
                  "insert": [Function],
                  "inserted": Object {
                    "1433tg5-MuiTooltip-popper": true,
                    "179vq5o-MuiPopper-root-MuiTooltip-popper": true,
                  },
                  "key": "css",
                  "nonce": undefined,
                  "registered": Object {
                    "css-1433tg5-MuiTooltip-popper": "label:MuiTooltip-popper;z-index:1500;pointer-events:none;",
                    "css-179vq5o-MuiPopper-root-MuiTooltip-popper": "label:MuiPopper-root;label:MuiTooltip-popper;z-index:1500;pointer-events:none;;",
                  },
                  "sheet": StyleSheet {
                    "_alreadyInsertedOrderInsensitiveRule": true,
                    "_insertTag": [Function],
                    "before": null,
                    "container": <head>
                      <style
                        data-emotion="css"
                        data-s=""
                      >
                        
                        .css-1433tg5-MuiTooltip-popper{z-index:1500;pointer-events:none;}
                      </style>
                      <style
                        data-emotion="css"
                        data-s=""
                      >
                        
                        .css-179vq5o-MuiPopper-root-MuiTooltip-popper{z-index:1500;pointer-events:none;}
                      </style>
                      <style
                        data-jss=""
                        data-meta="HvTooltip"
                      >
                        
.HvTooltip-root-1 {
  pointer-events: none;
}
.HvTooltip-tooltip-2 {
  width: fit-content;
  display: flex;
  padding: 15px 20px;
  max-width: 532px;
  box-shadow: 0 2px 12px rgba(65,65,65,0.12);
  background-color: #FBFCFC;
}
.HvTooltip-tooltip-2 p {
  color: #414141;
  width: fit-content;
  display: -webkit-box;
  overflow: hidden;
  box-orient: vertical;
  word-break: break-word;
  text-overflow: ellipsis;
}
.HvTooltip-tooltipMulti-3 {
  width: fit-content;
  display: flex;
  padding: 0;
  max-width: 532px;
  box-shadow: 0 2px 12px rgba(65,65,65,0.12);
  background-color: #FBFCFC;
}
.HvTooltip-tooltipMulti-3 p {
  color: #414141;
  width: fit-content;
  display: -webkit-box;
  overflow: hidden;
  box-orient: vertical;
  text-overflow: ellipsis;
}
.HvTooltip-popper-4 {
  opacity: 1;
}
.HvTooltip-title-5 {
  padding: 15px 20px;
  border-bottom: 3px solid #F0F0F0;
}
.HvTooltip-valuesContainer-6 {
  padding: 20px;
}
.HvTooltip-values-7 {
  display: flex;
  padding-bottom: 10px;
  justify-content: space-between;
}
.HvTooltip-values-7:last-child {
  padding-bottom: 0;
}
.HvTooltip-color-8 {
  width: 10px;
  height: 15px;
}
.HvTooltip-separator-9 {
  width: 10px;
}
.HvTooltip-separatorColor-10 {
  width: 5px;
}
.HvTooltip-valueWrapper-11 {
  padding: 20px;
}

                      </style>
                      <style
                        data-jss=""
                        data-meta="HvTooltip"
                      >
                        
.HvTooltip-root-12 {
  pointer-events: none;
}
.HvTooltip-tooltip-13 {
  width: fit-content;
  display: flex;
  padding: 15px 20px;
  max-width: 532px;
  box-shadow: 0 2px 12px rgba(65,65,65,0.12);
  background-color: #FBFCFC;
}
.HvTooltip-tooltip-13 p {
  color: #414141;
  width: fit-content;
  display: -webkit-box;
  overflow: hidden;
  box-orient: vertical;
  word-break: break-word;
  text-overflow: ellipsis;
}
.HvTooltip-tooltipMulti-14 {
  width: fit-content;
  display: flex;
  padding: 0;
  max-width: 532px;
  box-shadow: 0 2px 12px rgba(65,65,65,0.12);
  background-color: #FBFCFC;
}
.HvTooltip-tooltipMulti-14 p {
  color: #414141;
  width: fit-content;
  display: -webkit-box;
  overflow: hidden;
  box-orient: vertical;
  text-overflow: ellipsis;
}
.HvTooltip-popper-15 {
  opacity: 1;
}
.HvTooltip-title-16 {
  padding: 15px 20px;
  border-bottom: 3px solid #F0F0F0;
}
.HvTooltip-valuesContainer-17 {
  padding: 20px;
}
.HvTooltip-values-18 {
  display: flex;
  padding-bottom: 10px;
  justify-content: space-between;
}
.HvTooltip-values-18:last-child {
  padding-bottom: 0;
}
.HvTooltip-color-19 {
  width: 10px;
  height: 15px;
}
.HvTooltip-separator-20 {
  width: 10px;
}
.HvTooltip-separatorColor-21 {
  width: 5px;
}
.HvTooltip-valueWrapper-22 {
  padding: 20px;
}

                      </style>
                      <style
                        data-jss=""
                        data-meta="HvTooltip"
                      >
                        
.HvTooltip-root-23 {
  pointer-events: none;
}
.HvTooltip-tooltip-24 {
  width: fit-content;
  display: flex;
  padding: 15px 20px;
  max-width: 532px;
  box-shadow: 0 2px 12px rgba(65,65,65,0.12);
  background-color: #FBFCFC;
}
.HvTooltip-tooltip-24 p {
  color: #414141;
  width: fit-content;
  display: -webkit-box;
  overflow: hidden;
  box-orient: vertical;
  word-break: break-word;
  text-overflow: ellipsis;
}
.HvTooltip-tooltipMulti-25 {
  width: fit-content;
  display: flex;
  padding: 0;
  max-width: 532px;
  box-shadow: 0 2px 12px rgba(65,65,65,0.12);
  background-color: #FBFCFC;
}
.HvTooltip-tooltipMulti-25 p {
  color: #414141;
  width: fit-content;
  display: -webkit-box;
  overflow: hidden;
  box-orient: vertical;
  text-overflow: ellipsis;
}
.HvTooltip-popper-26 {
  opacity: 1;
}
.HvTooltip-title-27 {
  padding: 15px 20px;
  border-bottom: 3px solid #F0F0F0;
}
.HvTooltip-valuesContainer-28 {
  padding: 20px;
}
.HvTooltip-values-29 {
  display: flex;
  padding-bottom: 10px;
  justify-content: space-between;
}
.HvTooltip-values-29:last-child {
  padding-bottom: 0;
}
.HvTooltip-color-30 {
  width: 10px;
  height: 15px;
}
.HvTooltip-separator-31 {
  width: 10px;
}
.HvTooltip-separatorColor-32 {
  width: 5px;
}
.HvTooltip-valueWrapper-33 {
  padding: 20px;
}

                      </style>
                      <style
                        data-jss=""
                        data-meta="HvTooltip"
                      >
                        
.HvTooltip-root-34 {
  pointer-events: none;
}
.HvTooltip-tooltip-35 {
  width: fit-content;
  display: flex;
  padding: 15px 20px;
  max-width: 532px;
  box-shadow: 0 2px 12px rgba(65,65,65,0.12);
  background-color: #FBFCFC;
}
.HvTooltip-tooltip-35 p {
  color: #414141;
  width: fit-content;
  display: -webkit-box;
  overflow: hidden;
  box-orient: vertical;
  word-break: break-word;
  text-overflow: ellipsis;
}
.HvTooltip-tooltipMulti-36 {
  width: fit-content;
  display: flex;
  padding: 0;
  max-width: 532px;
  box-shadow: 0 2px 12px rgba(65,65,65,0.12);
  background-color: #FBFCFC;
}
.HvTooltip-tooltipMulti-36 p {
  color: #414141;
  width: fit-content;
  display: -webkit-box;
  overflow: hidden;
  box-orient: vertical;
  text-overflow: ellipsis;
}
.HvTooltip-popper-37 {
  opacity: 1;
}
.HvTooltip-title-38 {
  padding: 15px 20px;
  border-bottom: 3px solid #F0F0F0;
}
.HvTooltip-valuesContainer-39 {
  padding: 20px;
}
.HvTooltip-values-40 {
  display: flex;
  padding-bottom: 10px;
  justify-content: space-between;
}
.HvTooltip-values-40:last-child {
  padding-bottom: 0;
}
.HvTooltip-color-41 {
  width: 10px;
  height: 15px;
}
.HvTooltip-separator-42 {
  width: 10px;
}
.HvTooltip-separatorColor-43 {
  width: 5px;
}
.HvTooltip-valueWrapper-44 {
  padding: 20px;
}

                      </style>
                      <style
                        data-jss=""
                        data-meta="HvTooltip"
                      >
                        
.HvTooltip-root-45 {
  pointer-events: none;
}
.HvTooltip-tooltip-46 {
  width: fit-content;
  display: flex;
  padding: 15px 20px;
  max-width: 532px;
  box-shadow: 0 2px 12px rgba(65,65,65,0.12);
  background-color: #FBFCFC;
}
.HvTooltip-tooltip-46 p {
  color: #414141;
  width: fit-content;
  display: -webkit-box;
  overflow: hidden;
  box-orient: vertical;
  word-break: break-word;
  text-overflow: ellipsis;
}
.HvTooltip-tooltipMulti-47 {
  width: fit-content;
  display: flex;
  padding: 0;
  max-width: 532px;
  box-shadow: 0 2px 12px rgba(65,65,65,0.12);
  background-color: #FBFCFC;
}
.HvTooltip-tooltipMulti-47 p {
  color: #414141;
  width: fit-content;
  display: -webkit-box;
  overflow: hidden;
  box-orient: vertical;
  text-overflow: ellipsis;
}
.HvTooltip-popper-48 {
  opacity: 1;
}
.HvTooltip-title-49 {
  padding: 15px 20px;
  border-bottom: 3px solid #F0F0F0;
}
.HvTooltip-valuesContainer-50 {
  padding: 20px;
}
.HvTooltip-values-51 {
  display: flex;
  padding-bottom: 10px;
  justify-content: space-between;
}
.HvTooltip-values-51:last-child {
  padding-bottom: 0;
}
.HvTooltip-color-52 {
  width: 10px;
  height: 15px;
}
.HvTooltip-separator-53 {
  width: 10px;
}
.HvTooltip-separatorColor-54 {
  width: 5px;
}
.HvTooltip-valueWrapper-55 {
  padding: 20px;
}

                      </style>
                      <style
                        data-jss=""
                        data-meta="HvTooltip"
                      >
                        
.HvTooltip-root-56 {
  pointer-events: none;
}
.HvTooltip-tooltip-57 {
  width: fit-content;
  display: flex;
  padding: 15px 20px;
  max-width: 532px;
  box-shadow: 0 2px 12px rgba(65,65,65,0.12);
  background-color: #FBFCFC;
}
.HvTooltip-tooltip-57 p {
  color: #414141;
  width: fit-content;
  display: -webkit-box;
  overflow: hidden;
  box-orient: vertical;
  word-break: break-word;
  text-overflow: ellipsis;
}
.HvTooltip-tooltipMulti-58 {
  width: fit-content;
  display: flex;
  padding: 0;
  max-width: 532px;
  box-shadow: 0 2px 12px rgba(65,65,65,0.12);
  background-color: #FBFCFC;
}
.HvTooltip-tooltipMulti-58 p {
  color: #414141;
  width: fit-content;
  display: -webkit-box;
  overflow: hidden;
  box-orient: vertical;
  text-overflow: ellipsis;
}
.HvTooltip-popper-59 {
  opacity: 1;
}
.HvTooltip-title-60 {
  padding: 15px 20px;
  border-bottom: 3px solid #F0F0F0;
}
.HvTooltip-valuesContainer-61 {
  padding: 20px;
}
.HvTooltip-values-62 {
  display: flex;
  padding-bottom: 10px;
  justify-content: space-between;
}
.HvTooltip-values-62:last-child {
  padding-bottom: 0;
}
.HvTooltip-color-63 {
  width: 10px;
  height: 15px;
}
.HvTooltip-separator-64 {
  width: 10px;
}
.HvTooltip-separatorColor-65 {
  width: 5px;
}
.HvTooltip-valueWrapper-66 {
  padding: 20px;
}

                      </style>
                      <style
                        data-jss=""
                        data-meta="HvTooltip"
                      >
                        
.HvTooltip-root-67 {
  pointer-events: none;
}
.HvTooltip-tooltip-68 {
  width: fit-content;
  display: flex;
  padding: 15px 20px;
  max-width: 532px;
  box-shadow: 0 2px 12px rgba(65,65,65,0.12);
  background-color: #FBFCFC;
}
.HvTooltip-tooltip-68 p {
  color: #414141;
  width: fit-content;
  display: -webkit-box;
  overflow: hidden;
  box-orient: vertical;
  word-break: break-word;
  text-overflow: ellipsis;
}
.HvTooltip-tooltipMulti-69 {
  width: fit-content;
  display: flex;
  padding: 0;
  max-width: 532px;
  box-shadow: 0 2px 12px rgba(65,65,65,0.12);
  background-color: #FBFCFC;
}
.HvTooltip-tooltipMulti-69 p {
  color: #414141;
  width: fit-content;
  display: -webkit-box;
  overflow: hidden;
  box-orient: vertical;
  text-overflow: ellipsis;
}
.HvTooltip-popper-70 {
  opacity: 1;
}
.HvTooltip-title-71 {
  padding: 15px 20px;
  border-bottom: 3px solid #F0F0F0;
}
.HvTooltip-valuesContainer-72 {
  padding: 20px;
}
.HvTooltip-values-73 {
  display: flex;
  padding-bottom: 10px;
  justify-content: space-between;
}
.HvTooltip-values-73:last-child {
  padding-bottom: 0;
}
.HvTooltip-color-74 {
  width: 10px;
  height: 15px;
}
.HvTooltip-separator-75 {
  width: 10px;
}
.HvTooltip-separatorColor-76 {
  width: 5px;
}
.HvTooltip-valueWrapper-77 {
  padding: 20px;
}

                      </style>
                      <style
                        data-jss=""
                        data-meta="HvTooltip"
                      >
                        
.HvTooltip-root-78 {
  pointer-events: none;
}
.HvTooltip-tooltip-79 {
  width: fit-content;
  display: flex;
  padding: 15px 20px;
  max-width: 532px;
  box-shadow: 0 2px 12px rgba(65,65,65,0.12);
  background-color: #FBFCFC;
}
.HvTooltip-tooltip-79 p {
  color: #414141;
  width: fit-content;
  display: -webkit-box;
  overflow: hidden;
  box-orient: vertical;
  word-break: break-word;
  text-overflow: ellipsis;
}
.HvTooltip-tooltipMulti-80 {
  width: fit-content;
  display: flex;
  padding: 0;
  max-width: 532px;
  box-shadow: 0 2px 12px rgba(65,65,65,0.12);
  background-color: #FBFCFC;
}
.HvTooltip-tooltipMulti-80 p {
  color: #414141;
  width: fit-content;
  display: -webkit-box;
  overflow: hidden;
  box-orient: vertical;
  text-overflow: ellipsis;
}
.HvTooltip-popper-81 {
  opacity: 1;
}
.HvTooltip-title-82 {
  padding: 15px 20px;
  border-bottom: 3px solid #F0F0F0;
}
.HvTooltip-valuesContainer-83 {
  padding: 20px;
}
.HvTooltip-values-84 {
  display: flex;
  padding-bottom: 10px;
  justify-content: space-between;
}
.HvTooltip-values-84:last-child {
  padding-bottom: 0;
}
.HvTooltip-color-85 {
  width: 10px;
  height: 15px;
}
.HvTooltip-separator-86 {
  width: 10px;
}
.HvTooltip-separatorColor-87 {
  width: 5px;
}
.HvTooltip-valueWrapper-88 {
  padding: 20px;
}

                      </style>
                    </head>,
                    "ctr": 2,
                    "insertionPoint": undefined,
                    "isSpeedy": false,
                    "key": "css",
                    "nonce": undefined,
                    "prepend": true,
                    "tags": Array [
                      <style
                        data-emotion="css"
                        data-s=""
                      >
                        
                        .css-1433tg5-MuiTooltip-popper{z-index:1500;pointer-events:none;}
                      </style>,
                      <style
                        data-emotion="css"
                        data-s=""
                      >
                        
                        .css-179vq5o-MuiPopper-root-MuiTooltip-popper{z-index:1500;pointer-events:none;}
                      </style>,
                    ],
                  },
                }
              }
              isStringTag={false}
              serialized={
                Object {
                  "map": undefined,
                  "name": "179vq5o-MuiPopper-root-MuiTooltip-popper",
                  "next": undefined,
                  "styles": "label:MuiPopper-root;label:MuiTooltip-popper;z-index:1500;pointer-events:none;;",
                  "toString": [Function],
                }
              }
            />
            <ForwardRef(PopperUnstyled)
              anchorEl={
                <button
                  class=""
                  data-mui-internal-clone-element="true"
                  id="testChild"
                  type="submit"
                >
                  Hello World
                </button>
              }
              className="HvTooltip-popper-81 MuiTooltip-popper MuiTooltip-popperInteractive css-179vq5o-MuiPopper-root-MuiTooltip-popper"
              direction="ltr"
              id="mui-8"
              onBlur={[Function]}
              onFocus={[Function]}
              onMouseLeave={[Function]}
              onMouseOver={[Function]}
              open={false}
              placement="top"
              popperOptions={
                Object {
                  "modifiers": Array [
                    Object {
                      "enabled": false,
                      "name": "arrow",
                      "options": Object {
                        "element": null,
                        "padding": 4,
                      },
                    },
                  ],
                }
              }
              popperRef={
                Object {
                  "current": undefined,
                }
              }
              transition={true}
            />
          </MuiPopperRoot>
        </ForwardRef(Popper)>
      </MuiTooltipPopper>
    </ForwardRef(Tooltip)>
  </ForwardRef>
</WithStyles(ForwardRef)>
`;

exports[`Single Line Tooltip should render single line tooltip correctly 1`] = `
<WithStyles(ForwardRef)
  title={
    <WithStyles(ForwardRef)
      variant="highlightText"
    >
      Grid View
    </WithStyles(ForwardRef)>
  }
>
  <ForwardRef
    classes={
      Object {
        "color": "HvTooltip-color-19",
        "popper": "HvTooltip-popper-15",
        "root": "HvTooltip-root-12",
        "separator": "HvTooltip-separator-20",
        "separatorColor": "HvTooltip-separatorColor-21",
        "title": "HvTooltip-title-16",
        "tooltip": "HvTooltip-tooltip-13",
        "tooltipMulti": "HvTooltip-tooltipMulti-14",
        "valueWrapper": "HvTooltip-valueWrapper-22",
        "values": "HvTooltip-values-18",
        "valuesContainer": "HvTooltip-valuesContainer-17",
      }
    }
    title={
      <WithStyles(ForwardRef)
        variant="highlightText"
      >
        Grid View
      </WithStyles(ForwardRef)>
    }
  >
    <ForwardRef(Tooltip)
      TransitionComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "propTypes": Object {
            "addEndListener": [Function],
            "appear": [Function],
            "children": [Function],
            "easing": [Function],
            "in": [Function],
            "onEnter": [Function],
            "onEntered": [Function],
            "onEntering": [Function],
            "onExit": [Function],
            "onExited": [Function],
            "onExiting": [Function],
            "style": [Function],
            "timeout": [Function],
          },
          "render": [Function],
        }
      }
      TransitionProps={
        Object {
          "timeout": 400,
        }
      }
      classes={
        Object {
          "popper": "HvTooltip-popper-15",
          "tooltip": "HvTooltip-tooltip-13",
        }
      }
      enterDelay={300}
      placement="top"
      title={
        <WithStyles(ForwardRef)
          variant="highlightText"
        >
          Grid View
        </WithStyles(ForwardRef)>
      }
    >
      <button
        aria-label={null}
        aria-labelledby={null}
        className=""
        data-mui-internal-clone-element={true}
        id="testChild"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
        onTouchEnd={[Function]}
        onTouchStart={[Function]}
        type="submit"
      >
        Hello World
      </button>
      <MuiTooltipPopper
        anchorEl={
          <button
            class=""
            data-mui-internal-clone-element="true"
            id="testChild"
            type="submit"
          >
            Hello World
          </button>
        }
        as={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "propTypes": Object {
              "anchorEl": [Function],
              "children": [Function],
              "container": [Function],
              "disablePortal": [Function],
              "keepMounted": [Function],
              "modifiers": [Function],
              "open": [Function],
              "placement": [Function],
              "popperOptions": [Function],
              "popperRef": [Function],
              "sx": [Function],
              "transition": [Function],
            },
            "render": [Function],
          }
        }
        className="HvTooltip-popper-15 MuiTooltip-popper MuiTooltip-popperInteractive"
        id="mui-2"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
        open={false}
        ownerState={
          Object {
            "PopperComponentProp": undefined,
            "TransitionComponent": Object {
              "$$typeof": Symbol(react.forward_ref),
              "propTypes": Object {
                "addEndListener": [Function],
                "appear": [Function],
                "children": [Function],
                "easing": [Function],
                "in": [Function],
                "onEnter": [Function],
                "onEntered": [Function],
                "onEntering": [Function],
                "onExit": [Function],
                "onExited": [Function],
                "onExiting": [Function],
                "style": [Function],
                "timeout": [Function],
              },
              "render": [Function],
            },
            "TransitionProps": Object {
              "timeout": 400,
            },
            "arrow": false,
            "children": <button
              id="testChild"
              type="submit"
            >
              Hello World
            </button>,
            "className": undefined,
            "classes": Object {
              "popper": "HvTooltip-popper-15",
              "tooltip": "HvTooltip-tooltip-13",
            },
            "disableInteractive": false,
            "enterDelay": 300,
            "isRtl": false,
            "open": undefined,
            "placement": "top",
            "title": <WithStyles(ForwardRef)
              variant="highlightText"
            >
              Grid View
            </WithStyles(ForwardRef)>,
            "touch": false,
          }
        }
        placement="top"
        popperOptions={
          Object {
            "modifiers": Array [
              Object {
                "enabled": false,
                "name": "arrow",
                "options": Object {
                  "element": null,
                  "padding": 4,
                },
              },
            ],
          }
        }
        popperRef={
          Object {
            "current": undefined,
          }
        }
        transition={true}
      >
        <Insertion
          cache={
            Object {
              "insert": [Function],
              "inserted": Object {
                "1433tg5-MuiTooltip-popper": true,
                "179vq5o-MuiPopper-root-MuiTooltip-popper": true,
              },
              "key": "css",
              "nonce": undefined,
              "registered": Object {
                "css-1433tg5-MuiTooltip-popper": "label:MuiTooltip-popper;z-index:1500;pointer-events:none;",
                "css-179vq5o-MuiPopper-root-MuiTooltip-popper": "label:MuiPopper-root;label:MuiTooltip-popper;z-index:1500;pointer-events:none;;",
              },
              "sheet": StyleSheet {
                "_alreadyInsertedOrderInsensitiveRule": true,
                "_insertTag": [Function],
                "before": null,
                "container": <head>
                  <style
                    data-emotion="css"
                    data-s=""
                  >
                    
                    .css-1433tg5-MuiTooltip-popper{z-index:1500;pointer-events:none;}
                  </style>
                  <style
                    data-emotion="css"
                    data-s=""
                  >
                    
                    .css-179vq5o-MuiPopper-root-MuiTooltip-popper{z-index:1500;pointer-events:none;}
                  </style>
                  <style
                    data-jss=""
                    data-meta="HvTooltip"
                  >
                    
.HvTooltip-root-1 {
  pointer-events: none;
}
.HvTooltip-tooltip-2 {
  width: fit-content;
  display: flex;
  padding: 15px 20px;
  max-width: 532px;
  box-shadow: 0 2px 12px rgba(65,65,65,0.12);
  background-color: #FBFCFC;
}
.HvTooltip-tooltip-2 p {
  color: #414141;
  width: fit-content;
  display: -webkit-box;
  overflow: hidden;
  box-orient: vertical;
  word-break: break-word;
  text-overflow: ellipsis;
}
.HvTooltip-tooltipMulti-3 {
  width: fit-content;
  display: flex;
  padding: 0;
  max-width: 532px;
  box-shadow: 0 2px 12px rgba(65,65,65,0.12);
  background-color: #FBFCFC;
}
.HvTooltip-tooltipMulti-3 p {
  color: #414141;
  width: fit-content;
  display: -webkit-box;
  overflow: hidden;
  box-orient: vertical;
  text-overflow: ellipsis;
}
.HvTooltip-popper-4 {
  opacity: 1;
}
.HvTooltip-title-5 {
  padding: 15px 20px;
  border-bottom: 3px solid #F0F0F0;
}
.HvTooltip-valuesContainer-6 {
  padding: 20px;
}
.HvTooltip-values-7 {
  display: flex;
  padding-bottom: 10px;
  justify-content: space-between;
}
.HvTooltip-values-7:last-child {
  padding-bottom: 0;
}
.HvTooltip-color-8 {
  width: 10px;
  height: 15px;
}
.HvTooltip-separator-9 {
  width: 10px;
}
.HvTooltip-separatorColor-10 {
  width: 5px;
}
.HvTooltip-valueWrapper-11 {
  padding: 20px;
}

                  </style>
                  <style
                    data-jss=""
                    data-meta="HvTooltip"
                  >
                    
.HvTooltip-root-12 {
  pointer-events: none;
}
.HvTooltip-tooltip-13 {
  width: fit-content;
  display: flex;
  padding: 15px 20px;
  max-width: 532px;
  box-shadow: 0 2px 12px rgba(65,65,65,0.12);
  background-color: #FBFCFC;
}
.HvTooltip-tooltip-13 p {
  color: #414141;
  width: fit-content;
  display: -webkit-box;
  overflow: hidden;
  box-orient: vertical;
  word-break: break-word;
  text-overflow: ellipsis;
}
.HvTooltip-tooltipMulti-14 {
  width: fit-content;
  display: flex;
  padding: 0;
  max-width: 532px;
  box-shadow: 0 2px 12px rgba(65,65,65,0.12);
  background-color: #FBFCFC;
}
.HvTooltip-tooltipMulti-14 p {
  color: #414141;
  width: fit-content;
  display: -webkit-box;
  overflow: hidden;
  box-orient: vertical;
  text-overflow: ellipsis;
}
.HvTooltip-popper-15 {
  opacity: 1;
}
.HvTooltip-title-16 {
  padding: 15px 20px;
  border-bottom: 3px solid #F0F0F0;
}
.HvTooltip-valuesContainer-17 {
  padding: 20px;
}
.HvTooltip-values-18 {
  display: flex;
  padding-bottom: 10px;
  justify-content: space-between;
}
.HvTooltip-values-18:last-child {
  padding-bottom: 0;
}
.HvTooltip-color-19 {
  width: 10px;
  height: 15px;
}
.HvTooltip-separator-20 {
  width: 10px;
}
.HvTooltip-separatorColor-21 {
  width: 5px;
}
.HvTooltip-valueWrapper-22 {
  padding: 20px;
}

                  </style>
                </head>,
                "ctr": 2,
                "insertionPoint": undefined,
                "isSpeedy": false,
                "key": "css",
                "nonce": undefined,
                "prepend": true,
                "tags": Array [
                  <style
                    data-emotion="css"
                    data-s=""
                  >
                    
                    .css-1433tg5-MuiTooltip-popper{z-index:1500;pointer-events:none;}
                  </style>,
                  <style
                    data-emotion="css"
                    data-s=""
                  >
                    
                    .css-179vq5o-MuiPopper-root-MuiTooltip-popper{z-index:1500;pointer-events:none;}
                  </style>,
                ],
              },
            }
          }
          isStringTag={false}
          serialized={
            Object {
              "map": undefined,
              "name": "1433tg5-MuiTooltip-popper",
              "next": undefined,
              "styles": "label:MuiTooltip-popper;z-index:1500;pointer-events:none;",
              "toString": [Function],
            }
          }
        />
        <ForwardRef(Popper)
          anchorEl={
            <button
              class=""
              data-mui-internal-clone-element="true"
              id="testChild"
              type="submit"
            >
              Hello World
            </button>
          }
          className="HvTooltip-popper-15 MuiTooltip-popper MuiTooltip-popperInteractive css-1433tg5-MuiTooltip-popper"
          id="mui-2"
          onBlur={[Function]}
          onFocus={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          open={false}
          placement="top"
          popperOptions={
            Object {
              "modifiers": Array [
                Object {
                  "enabled": false,
                  "name": "arrow",
                  "options": Object {
                    "element": null,
                    "padding": 4,
                  },
                },
              ],
            }
          }
          popperRef={
            Object {
              "current": undefined,
            }
          }
          transition={true}
        >
          <MuiPopperRoot
            anchorEl={
              <button
                class=""
                data-mui-internal-clone-element="true"
                id="testChild"
                type="submit"
              >
                Hello World
              </button>
            }
            className="HvTooltip-popper-15 MuiTooltip-popper MuiTooltip-popperInteractive css-1433tg5-MuiTooltip-popper"
            direction="ltr"
            id="mui-2"
            onBlur={[Function]}
            onFocus={[Function]}
            onMouseLeave={[Function]}
            onMouseOver={[Function]}
            open={false}
            placement="top"
            popperOptions={
              Object {
                "modifiers": Array [
                  Object {
                    "enabled": false,
                    "name": "arrow",
                    "options": Object {
                      "element": null,
                      "padding": 4,
                    },
                  },
                ],
              }
            }
            popperRef={
              Object {
                "current": undefined,
              }
            }
            transition={true}
          >
            <Insertion
              cache={
                Object {
                  "insert": [Function],
                  "inserted": Object {
                    "1433tg5-MuiTooltip-popper": true,
                    "179vq5o-MuiPopper-root-MuiTooltip-popper": true,
                  },
                  "key": "css",
                  "nonce": undefined,
                  "registered": Object {
                    "css-1433tg5-MuiTooltip-popper": "label:MuiTooltip-popper;z-index:1500;pointer-events:none;",
                    "css-179vq5o-MuiPopper-root-MuiTooltip-popper": "label:MuiPopper-root;label:MuiTooltip-popper;z-index:1500;pointer-events:none;;",
                  },
                  "sheet": StyleSheet {
                    "_alreadyInsertedOrderInsensitiveRule": true,
                    "_insertTag": [Function],
                    "before": null,
                    "container": <head>
                      <style
                        data-emotion="css"
                        data-s=""
                      >
                        
                        .css-1433tg5-MuiTooltip-popper{z-index:1500;pointer-events:none;}
                      </style>
                      <style
                        data-emotion="css"
                        data-s=""
                      >
                        
                        .css-179vq5o-MuiPopper-root-MuiTooltip-popper{z-index:1500;pointer-events:none;}
                      </style>
                      <style
                        data-jss=""
                        data-meta="HvTooltip"
                      >
                        
.HvTooltip-root-1 {
  pointer-events: none;
}
.HvTooltip-tooltip-2 {
  width: fit-content;
  display: flex;
  padding: 15px 20px;
  max-width: 532px;
  box-shadow: 0 2px 12px rgba(65,65,65,0.12);
  background-color: #FBFCFC;
}
.HvTooltip-tooltip-2 p {
  color: #414141;
  width: fit-content;
  display: -webkit-box;
  overflow: hidden;
  box-orient: vertical;
  word-break: break-word;
  text-overflow: ellipsis;
}
.HvTooltip-tooltipMulti-3 {
  width: fit-content;
  display: flex;
  padding: 0;
  max-width: 532px;
  box-shadow: 0 2px 12px rgba(65,65,65,0.12);
  background-color: #FBFCFC;
}
.HvTooltip-tooltipMulti-3 p {
  color: #414141;
  width: fit-content;
  display: -webkit-box;
  overflow: hidden;
  box-orient: vertical;
  text-overflow: ellipsis;
}
.HvTooltip-popper-4 {
  opacity: 1;
}
.HvTooltip-title-5 {
  padding: 15px 20px;
  border-bottom: 3px solid #F0F0F0;
}
.HvTooltip-valuesContainer-6 {
  padding: 20px;
}
.HvTooltip-values-7 {
  display: flex;
  padding-bottom: 10px;
  justify-content: space-between;
}
.HvTooltip-values-7:last-child {
  padding-bottom: 0;
}
.HvTooltip-color-8 {
  width: 10px;
  height: 15px;
}
.HvTooltip-separator-9 {
  width: 10px;
}
.HvTooltip-separatorColor-10 {
  width: 5px;
}
.HvTooltip-valueWrapper-11 {
  padding: 20px;
}

                      </style>
                      <style
                        data-jss=""
                        data-meta="HvTooltip"
                      >
                        
.HvTooltip-root-12 {
  pointer-events: none;
}
.HvTooltip-tooltip-13 {
  width: fit-content;
  display: flex;
  padding: 15px 20px;
  max-width: 532px;
  box-shadow: 0 2px 12px rgba(65,65,65,0.12);
  background-color: #FBFCFC;
}
.HvTooltip-tooltip-13 p {
  color: #414141;
  width: fit-content;
  display: -webkit-box;
  overflow: hidden;
  box-orient: vertical;
  word-break: break-word;
  text-overflow: ellipsis;
}
.HvTooltip-tooltipMulti-14 {
  width: fit-content;
  display: flex;
  padding: 0;
  max-width: 532px;
  box-shadow: 0 2px 12px rgba(65,65,65,0.12);
  background-color: #FBFCFC;
}
.HvTooltip-tooltipMulti-14 p {
  color: #414141;
  width: fit-content;
  display: -webkit-box;
  overflow: hidden;
  box-orient: vertical;
  text-overflow: ellipsis;
}
.HvTooltip-popper-15 {
  opacity: 1;
}
.HvTooltip-title-16 {
  padding: 15px 20px;
  border-bottom: 3px solid #F0F0F0;
}
.HvTooltip-valuesContainer-17 {
  padding: 20px;
}
.HvTooltip-values-18 {
  display: flex;
  padding-bottom: 10px;
  justify-content: space-between;
}
.HvTooltip-values-18:last-child {
  padding-bottom: 0;
}
.HvTooltip-color-19 {
  width: 10px;
  height: 15px;
}
.HvTooltip-separator-20 {
  width: 10px;
}
.HvTooltip-separatorColor-21 {
  width: 5px;
}
.HvTooltip-valueWrapper-22 {
  padding: 20px;
}

                      </style>
                    </head>,
                    "ctr": 2,
                    "insertionPoint": undefined,
                    "isSpeedy": false,
                    "key": "css",
                    "nonce": undefined,
                    "prepend": true,
                    "tags": Array [
                      <style
                        data-emotion="css"
                        data-s=""
                      >
                        
                        .css-1433tg5-MuiTooltip-popper{z-index:1500;pointer-events:none;}
                      </style>,
                      <style
                        data-emotion="css"
                        data-s=""
                      >
                        
                        .css-179vq5o-MuiPopper-root-MuiTooltip-popper{z-index:1500;pointer-events:none;}
                      </style>,
                    ],
                  },
                }
              }
              isStringTag={false}
              serialized={
                Object {
                  "map": undefined,
                  "name": "179vq5o-MuiPopper-root-MuiTooltip-popper",
                  "next": undefined,
                  "styles": "label:MuiPopper-root;label:MuiTooltip-popper;z-index:1500;pointer-events:none;;",
                  "toString": [Function],
                }
              }
            />
            <ForwardRef(PopperUnstyled)
              anchorEl={
                <button
                  class=""
                  data-mui-internal-clone-element="true"
                  id="testChild"
                  type="submit"
                >
                  Hello World
                </button>
              }
              className="HvTooltip-popper-15 MuiTooltip-popper MuiTooltip-popperInteractive css-179vq5o-MuiPopper-root-MuiTooltip-popper"
              direction="ltr"
              id="mui-2"
              onBlur={[Function]}
              onFocus={[Function]}
              onMouseLeave={[Function]}
              onMouseOver={[Function]}
              open={false}
              placement="top"
              popperOptions={
                Object {
                  "modifiers": Array [
                    Object {
                      "enabled": false,
                      "name": "arrow",
                      "options": Object {
                        "element": null,
                        "padding": 4,
                      },
                    },
                  ],
                }
              }
              popperRef={
                Object {
                  "current": undefined,
                }
              }
              transition={true}
            />
          </MuiPopperRoot>
        </ForwardRef(Popper)>
      </MuiTooltipPopper>
    </ForwardRef(Tooltip)>
  </ForwardRef>
</WithStyles(ForwardRef)>
`;
